<resources>
    <string name="app_name">Personaliza tu Pizza</string>
    <string name="title_text">Personaliza tu Pizza 🍕</string>
    <string name="section_extras">Extras</string>

    <string name="extra_cheese">Extra Queso</string>
    <string name="mushrooms">Champiñones</string>
    <string name="bacon">Tocino</string>

    <string name="show_extras">Mostrar Extras</string>
    <string name="hide_extras">Ocultar Extras</string>}

    <string name="extras">Extras: </string>

    <string name="selected_pizza_placeholder">Seleccione los extras</string>

    <string name="order_shipping">¿Entrega a domicilio?</string>
    <string name="order_confirmation">Ordenar</string>

    <string name="selectPizza">Elige tu pizza:</string>
    <string-array name="pizzaOptions">
        <item>Pizza de pepperoni</item>
        <item>Pizza hawaiana</item>
        <item>Pizza de queso</item>
        <item>Pizza vegetariana</item>
    </string-array>
    <string name="masatradicional">Masa tradicional</string>
    <string name="masapremium">Masa premium</string>
    <string name="masaespecial">Masa especial</string>

    <string name="endScroll">Estás en el final </string>
    <string name="startScroll">Estás en el principio </string>
    <string name="finishOrder">Orden realizada exitosamente!</string>
</resources>

