<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundColor"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingTop="30dp"
        android:paddingBottom="10dp"
        android:background="@color/primaryColor">

        <TextView
            android:id="@+id/titleText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_text"
            android:textSize="24sp"
            android:textStyle="bold"
            android:textColor="@color/white"
            />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_marginTop="6dp">

        <ImageView
            android:id="@+id/pizzasDisplay"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:src="@drawable/pizzadefault"
            android:scaleType="centerCrop"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/selectPizza"
            android:textAlignment="center"
            android:textSize="20sp"
            android:layout_marginTop="4dp"
            android:textColor="@color/textColor"/>

        <Spinner
            android:id="@+id/pizzaSpinner"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:textColor="@color/textColor"
            android:backgroundTint="@color/primaryColor"/>

    </LinearLayout>

    <ToggleButton
        android:id="@+id/toggleExtras"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textOn="@string/hide_extras"
        android:textOff="@string/show_extras"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/primaryColor"
        android:textColor="@color/white"/>

    <LinearLayout
        android:id="@+id/extrasContainer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="10dp"
        >

        <TextView
            android:id="@+id/sectionExtras"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/section_extras"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@color/textColor"/>

        <CheckBox
            android:id="@+id/checkExtraCheese"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/extra_cheese"
            android:textColor="@color/textColor"/>

        <CheckBox
            android:id="@+id/checkMushrooms"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mushrooms"
            android:textColor="@color/textColor"/>

        <CheckBox
            android:id="@+id/checkBacon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bacon"
            android:textColor="@color/textColor"/>
    </LinearLayout>

    <TextView
        android:id="@+id/textSelected"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/selected_pizza_placeholder"
        android:textSize="18sp"
        android:textColor="@color/textColor"
        android:layout_marginTop="20dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/order_shipping"
                android:textSize="20sp"/>

            <Switch
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:id="@+id/switchShipping"

                />

        </LinearLayout>

        <ImageView
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:src="@drawable/mesa"
            android:id="@+id/shippingImage"
            />
    </LinearLayout>


</LinearLayout>